# AdminHelper

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  docker-compose.test.yml  docker-compose.yml  ruff.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: audit.yml  ci.yml  docker.yml  release.yml
agent/: srm-monitor-agent
agent-go/: .gitignore  Makefile  build-deb.sh  build-rpm.sh
agent-go/cmd/adminhelper-agent/: handlers.go  main.go
agent-go/cmd/srm-agent/: run.go
agent-go/deb/DEBIAN/: control  postinst  postrm  prerm
agent-go/internal/config/: config.go  config_test.go  paths.go
agent-go/internal/frpc/: http.go  (+6 more)
agent-go/rpm/: adminhelper-agent.spec  srm-agent.spec
agent-go/systemd/: frpc.service  srm-agent.service  srm-agent.timer
agent/systemd/: srm-monitor-agent.service  srm-monitor-agent.timer
apps/agent/: .gitignore  Makefile  build-deb.sh  build-repo.sh  build-rpm.sh  go.mod  go.sum
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: ansible.rs  auth.rs  commands.rs  diagnostics.rs  enrollment.rs  frpc.rs  main.rs  models.rs  notifications.rs  password.rs  storage.rs  sync.rs  tofu.rs  tunnel.rs  validation.rs
apps/desktop/src-tauri/src/connection/: rdp.rs
apps/extension/: background.js  manifest.json  options.css  options.html  options.js  popup.css  popup.html  popup.js
apps/gateway/: Dockerfile  nginx.conf
apps/monitoring/: Dockerfile  alembic.ini  docker-entrypoint.sh  requirements.txt
apps/server/: .gitignore  docker-entrypoint.sh  requirements-dev.txt  requirements.txt
apps/web/: .prettierignore  package-lock.json  package.json  tsconfig.json
client/src/: app.js  connectionModel.js  i18n.js  index.html  platformApi.js  settingsModel.js  styles.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: commands.rs  error.rs  main.rs  models.rs  password.rs  storage.rs  sync.rs  terminal.rs  validation.rs
client/src-tauri/src/connection/: mod.rs  rdp.rs  ssh.rs  web.rs
desktop-src/: package-lock.json  package.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
desktop-src/src/: App.svelte  main.ts
desktop/src/: app.js  authLogin.js  connectFlow.js  connectionEditor.js  connectionRenderer.js  i18n.js  index.html  monitoring.js  monitoringApi.js  monitoringModel.js  passwordPrompt.js  platformApi.js  scrollUtils.js  settingsManager.js  settingsModel.js  statusMessages.js  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: ansible.rs  auth.rs  commands.rs  error.rs  frpc.rs  main.rs  models.rs  password.rs  sync.rs  terminal.rs  tunnel.rs  validation.rs
desktop/src-tauri/src/connection/: mod.rs  rdp.rs  ssh.rs  web.rs
docs/: administration.html  developer.html  index.html  monitoring.html
docs/admin/: agent-deployment.html  ansible.html  benutzer.html  betrieb.html  extension.html  frp-tunnel.html  index.html  installation.html  monitoring.html  troubleshooting.html
docs/adr/: 0001-unified-pki-and-secure-deployment.md  0002-phase-a-task-plan.md  0003-decoupled-enrollment-door.md
docs/assets/: app.js  styles.css
docs/developer/: agent.html  api-reference.html  cicd.html  desktop.html  extension.html  hooks.html  index.html  monitoring.html  server.html  webui.html
docs/en/: administration.html  developer.html  index.html  monitoring.html
docs/examples/: event_hook_notify.py  schedule_hook_cleanup.py  webhook_add_connection.py  webhook_http_import.py
extension/: background.js  manifest.json  popup.js  popup.test.mjs
frontend-src/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts  vitest.config.ts
frontend-src/src/: App.svelte  routes.ts  vite-env.d.ts
monitoring/alembic/: env.py
monitoring/app/: alerter.py  check_engine.py  main.py  models.py  router.py  scheduler.py  schemas.py  template_sync.py
monitoring/tests/: conftest.py  test_alerter.py  test_check_engine.py  test_victoria.py
nginx/: docker-entrypoint.sh  nginx.conf
nginx/conf.d/: default.conf.template
scripts/: ci_publish_via_api.sh  diagnostics.sh  install.sh  postgres-init.sh  restore.sh  uninstall.sh  update.sh
scripts/tests/: agent_monitoring_test.sh  desktop_e2e_connect.sh  desktop_e2e_connect_tunnel.sh  desktop_e2e_crud.sh  desktop_e2e_live.sh  desktop_e2e_sse_push.sh  diagnostics_test.sh  e2e_api.py  integration_stack_test.sh  lib_e2e_stack.sh  repo_build_test.sh  sse_push_e2e.sh  update_test.sh
server/: .dockerignore  Dockerfile  docker-entrypoint.sh  requirements.txt
server/alembic/: env.py
server/app/: auth.py  config.py  database.py  main.py  middleware.py  models.py  schemas.py  script_runner.py  storage.py
server/frontend/: index.html
server/static/: app.js  index.html  styles.css
server/tests/: conftest.py  test_alembic_consistency.py  test_auth.py  test_blacklist_cleanup.py  test_bootstrap.py  test_config_generator.py  test_connection_schemas.py  test_frp_permissions.py  test_frp_provision_authz.py  test_ip_filter.py  test_provisioning.py
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+613 files in other folders)
