[package]
name = "simple_remote_manager"
version = "0.6.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["image-png"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
open = "5"
keyring = "2.3"
tauri-plugin-shell = "2"
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = ["Win32_Security_Credentials", "Win32_Foundation"] }
