[package]
name = "adminhelper"
version = "0.26.0"
description = "AdminHelper Desktop-Client — Remote-Verwaltung mit FRP-Tunneln"
authors = ["Kevin Stenzel <kevin@ks98.de>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["image-png"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
open = "5"
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "async-secret-service", "async-io", "crypto-rust"] }
tauri-plugin-shell = "2"
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Security_Credentials", "Win32_Foundation"] }
