[package]
name = "adminhelper"
version = "0.34.0"
description = "AdminHelper Desktop-Client — Remote-Verwaltung mit FRP-Tunneln"
authors = ["Kevin Stenzel <kevin@ks98.de>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["image-png"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
open = "5"
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "async-secret-service", "async-io", "crypto-rust"] }
tauri-plugin-shell = "2"
# Native "save as" dialog so the user picks where the browser .p12 is written.
tauri-plugin-dialog = "2"
# Desktop logging: stdout + a size-rotated file in the app log dir; the file is
# the source for the diagnostics report.
tauri-plugin-log = "2"
log = "0.4"
chrono = "0.4"
# Token redaction in the diagnostics report.
regex = "1"
# TLS TOFU pinning (desktop self-signed path): a custom rustls ServerCertVerifier
# needs rustls + an explicit ring provider (must match the version reqwest's
# rustls-tls resolves — 0.23 — or use_preconfigured_tls's downcast fails at
# runtime). default-features=false keeps aws-lc-rs out; feature unification only
# adds to what reqwest already enabled.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
sha2 = "0.10"
# On-device ECDSA keypair + CSR for mTLS enrollment (A5). ring backend to match
# rustls above and keep aws-lc-rs out (feature unification only adds to ring).
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
# Parse the enrolled cert/key/CA PEM into the rustls types for the mTLS client.
rustls-pemfile = "2"
# Read the enrolled leaf's validity to decide when to auto-renew (A5b).
x509-parser = "0.16"
# Package the browser's enrolled cert + key as a PKCS12 for import (A5c).
p12 = "0.6"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Security_Credentials", "Win32_Foundation"] }

[dev-dependencies]
# Real-handshake TOFU test: an in-process TLS server presenting a controlled
# certificate, so we can prove reqwest actually invokes the pinning verifier and
# rejects a cert change end to end. Both are already in the lockfile (cached).
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "net", "io-util", "time"] }
# default-features=false keeps aws-lc-rs (and its cmake/C build) out of the test
# tree, so tests use the same ring provider as the shipped binary.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
